Fixed reused class name, same class name was on two different modules. The two components that used the same class name happened to overlap.

--- a/src/components/atoms/Rating/Rating.module.scss
+++ b/src/components/atoms/Rating/Rating.module.scss
@@ -3,7 +3,7 @@
 
 $box-sizing: 50px;
 
-.container {
+.rating {
     display: flex;
     @extend %flex-center;
 
